--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,4 +1,5 @@
 .btn {
+    @include animate(background-color color);
     background: $red;
     border-radius: 40px;
     padding: 10px 22px;
@@ -7,6 +8,9 @@
     text-decoration: none;
     display: inline-block;
     color: $white;
+    &:hover{
+        background-color: $red-dark;
+    }
     @include media('<desktop') {
         padding: 7px 15px;
         font-size: 13px;
@@ -27,10 +31,14 @@
         }
     }
    &.btn-thin{
+         @include animate(opacity);
         background-color:   transparent;
         border: 1px solid $white;
         color:$white;
         padding:6px 28px;
         font-size: 16px;    
+        &:hover{
+            opacity: .7 !important    ;
+        }
     }
 }
