--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -6,7 +6,7 @@
 @import 'banner';
 
 @import 'products-box';
-@import 'product-section';
+@import 'default-section';
 @import 'decoration-title';
 @import 'products-box';
 
