--- a/src/scss/components/_default-section.scss
+++ b/src/scss/components/_default-section.scss
@@ -1,6 +1,6 @@
 
 .default-section{
-	padding: 66px 0;
+	padding: 66px 0 40px;
 	@include media('<desktop') {
 		padding: 30px 0;
 	}
@@ -13,7 +13,7 @@
         max-width: 800px;
         line-height: 1.2;
     }
-    padding-bottom: 20px;
+  
     &.gray{
     	background-color: #f9f9f9;
     }
