--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -9,6 +9,7 @@
 @import 'decoration-title';
 @import 'products-box';
 @import 'product-popup';
-@import 'text-image-carousel';
-
+@import 'text-image';
+@import 'search-form';
+@import 'thumb-section';
 
