--- a/src/scss/components/_text-image.scss
+++ b/src/scss/components/_text-image.scss
@@ -1,9 +1,9 @@
 .text-image-carousel {
-    padding: 18px 41px 20px;
+    padding: 18px 41px 0px;
     @include media('<tablet') {
-        padding: 15px 0px 20px;
+        padding: 15px 0px 0px;
     }
-    .slide-wrapper {
+    .text-image-holder {
         display: flex;
         align-items: flex-end;
         justify-content: flex-end;
@@ -23,22 +23,28 @@
         position: relative;
         overflow: hidden;
         flex-shrink: 0;
-        order: 0;
         @include media('<desktop') {
             width: 200px;
             height: 200px;
-            margin-left: 0;
+            margin-left: 25px;
             margin-bottom: 15px;
+            order: 0;
+        }
+        @include media('<tablet') {
+            margin-left: 0;
         }
         img {
             width: 1000px;
             height: auto;
             max-width: none;
             position: absolute;
-            top: 0%;
+            top: 0px;
             left: 50%;
-            transform: translate(-50%, 0%);
+            transform: translate(-50%, 10vh);
             @include animate(top, .08s);
+            @include media('<desktop') {
+                       transform: translate(-50%, 5vh);	
+            }	
         }
     }
     .owl-dots {
@@ -64,12 +70,21 @@
     .text-holder {
         text-align: right;
         padding-bottom: 0;
-        order: 1;
+        @include media('<desktop') {
+            font-size: 17px;
+        }
         @include media('<tablet') {
             font-size: 16px;
             text-align: center;
             max-width: 400px;
             margin: 0 auto;
+            order: 1;
+            width: 100%;
+            max-width: none;
+            padding: 0 20%;
+        }
+        @include media('<phone') {
+            padding: 0;
         }
         p {
             margin-bottom: 49px;
@@ -77,9 +92,57 @@
                 margin-bottom: 15px;
             }
         }
-        .btn {
+        .btn:not(.btn-search) {
             padding: 16px 36px;
             font-size: 18px;
+        }
+    }
+}
+
+.text-image-box {
+    @extend .text-image-carousel;
+		margin-bottom: 84px;	
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-start;
+    @include media('>=desktop') {
+        padding: 67px 0 0 0;
+    }
+    @include media('<desktop') {
+    	margin: 40px;	
+    }	
+    @include media('<tablet') {
+    	margin-bottom: 0;	
+    }	
+    @include media('<tablet') {
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        text-align: center;
+    }
+    .text-holder {
+        order: 2;
+        text-align: left;
+        @include media('<tablet') {
+            text-align: center;
+        }
+        p {
+            margin: 0 0 20px;
+        }
+    }
+    .img-holder {
+        margin: 0 25px 0 0;
+        @include media('<tablet') {
+            margin: 0 0 20px 0;
+        }
+    }
+    .search-form {
+        margin-bottom: 13px;
+        @include media('<tablet') {
+            max-width: 300px;
+            margin: 0 auto;
         }
     }
 }
