added caroisel image section

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -37,6 +37,11 @@
         color: $white;
         padding: 6px 28px;
         font-size: 16px;
+        font-weight: 300;   
+        @include media('<tablet') {
+            font-size: 14px;    
+            padding: 6px 10px;
+        }    
         &:hover {
             opacity: .7 !important;
         }
