--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -68,11 +68,11 @@
 .icon-i-snow:before {
   content: "\e910";
 }
-.icon-i-specifiques .path1:before {
+.icon-i-specifiques:before {
   content: "\e911";
   color: rgb(255, 255, 255);
 }
-.icon-i-specifiques .path2:before {
+.icon-i-specifiques:after {
   content: "\e912";
   margin-left: -1em;
   color: rgb(94, 30, 34);
