--- a/src/scss/components/_thumb-section.scss
+++ b/src/scss/components/_thumb-section.scss
@@ -4,15 +4,18 @@
     background-position: 50% 50%;
     padding: 58px 0 7px;
     background-attachment: fixed;
+    @include media('<desktop') {
+        padding: 30px 0
+    }   
     .h2 {
         display: block;
         text-align: center;
         margin-bottom: 78px;
         @include media('<desktop') {
-            margin-bottom: 40px;
+            margin-bottom: 60px;
         }
         @include media('<tablet') {
-            margin-bottom: 20px;
+            margin-bottom: 50px;
         }
     }
     .thumbs-holder {
@@ -85,6 +88,7 @@
 
 .h2.decoration-center {
     position: relative;
+    text-align: center;
     &:after {
         content: '';
         position: absolute;
@@ -93,6 +97,6 @@
         transform: translateX(-50%);
         width: 204px;
         height: 1px;
-        background-color: #b8b8b8;
+        background-color: currentColor;
     }
 }
