deleted unnececry files

--- a/src/scss/components/_video-carousel.scss
+++ b/src/scss/components/_video-carousel.scss
@@ -65,7 +65,7 @@ html body.ios {
             padding: 0 50px;
         }
     }
-    .popup-link {
+    .video-link {
         @include animate(border-color background-color);
         display: block;
         position: relative;
