--- a/src/scss/components/_logos-section.scss
+++ b/src/scss/components/_logos-section.scss
@@ -1,5 +1,5 @@
 .logos-section {
-    padding: 68px 0;
+    padding: 68px 0 98px;
     background-color: $red;
     color: $white;
     font-size: 24px;
