--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,69 +2,129 @@
     background-image: url('../images/footer-bg.jpg');
     background-size: cover;
     background-position: 50% 50%;
-    padding: 115px 0 40px;
+    padding: 119px 0 40px;
     color: $white;
+    position: relative;
+    line-height: 1.2;
+    @include media('<tablet') {
+        padding-bottom: 120px;
+    }
     .h4 {
         padding: 0;
         margin-bottom: 20px;
-
+        @include media('<tablet') {
+            margin-bottom: 24px;
+        }
     }
+
     .top-row {
         @extend %clearfix;
         .logo-holder {
-            width: 18%;
+            width: 17%;
+            padding-left: 13px;
             float: left;
+            @include media('<tablet') {
+                width: 100%;
+                text-align: center;
+                margin-bottom: 48px;
+            }
+            .logo {
+                width: 139px;
+                display: block;
+                @include media('<tablet') {
+                    width: 94px;
+                    margin: 0 auto;
+                }
+                img {
+                    width: 100%;
+                }
+            }
         }
         .contact-row {
-            width: 82%;
+            width: 83%;
             float: left;
+            @include media('<tablet') {
+                width: 100%;
+            }
         }
-        .h4{
-        @include media('<desktop') {
-       text-align: center;
-        }}
+        .h4 {
+            margin-bottom: 30px;
+            @include media('<desktop') {
+                text-align: center;
+            }
+            @include media('<tablet') {
+                text-align: left;
+            }
+        }
     }
     .contact-links {
         display: flex;
         align-items: flex-start;
         justify-content: flex-start;
         @include media('<desktop') {
-        	flex-wrap:wrap;
+            flex-wrap: wrap;
+        }
+        @include media('<tablet') {
+            padding: 0 10%;
+        }
+        @include media('<phone') {
+            padding: 0;
         }
         .video-box {
-            margin: 0 20px 15px;
-	@include media('<desktop') {
-		margin-left: auto;
-		margin-right: auto ;
-	}
+            margin: 0 20px 19px;
+            @include media('<desktop') {
+                margin-left: auto;
+                margin-right: auto;
+            }
+            @include media('<tablet') {
+                width: 100%;
+            }
         }
         .video-link {
             font-size: 14px;
             text-align: center;
             display: inline-block;
             margin-bottom: 26px;
-			@include media('<desktop') {
-				width: 30%;
-			margin:0 10% 20px;
-			}
+            margin-right: 2.7%;
+            @include media('<widescreen') {
+                margin-right: 0;
+            }
+            @include media('<desktop') {
+                width: 30%;
+                margin: 0 10% 20px;
+            }
+            @include media('<tablet') {
+                width: 50%;
+                margin: 0 0 30px;
+                padding: 0 15px;
+            }
             .name {
                 font-size: 14px;
                 display: block;
-                margin-bottom: 10px;
+                margin-bottom: 6px;
             }
             .position {
-                margin-bottom: 10px;
+                font-style: italic;
+                margin-bottom: 9px;
                 display: inline-block;
             }
             .btn {
                 font-weight: 300;
+                padding: 8px 10px
             }
         }
     }
     .copy {
         display: block;
         font-size: 13px;
-        padding-top: 10px;
+
+        padding-top: 14px;
+        @include media('<tablet') {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
         a {
             color: inherit;
             @include animate(color);
@@ -74,35 +134,103 @@
         }
     }
     .bottom-row {
-        padding-left: 18%;
+        padding-left: 17%;
         display: flex;
         font-size: 15px;
         line-height: 1.1;
-        padding-top: 50px;
+        padding-top: 45px;
+        font-size: 15px;
         @include media('<widescreen') {
             padding-left: 0;
         }
+        @include media('<tablet') {
+            flex-wrap: wrap;
+        }
+        address {
+            font-style: normal;
+            margin-bottom: 20px;
+        }
         .col {
-            width: 20%;
+            width: 28.1%;
             padding-right: 30px;
-            @include media('<desktop') {
-            	padding-right: 10px;
-            }
+            margin-bottom: 30px;
+            padding-left: 23px;
+            font-size: 18px;
+              line-height: 1.25;
             @include media('<widescreen') {
                 width: 25%;
             }
+            @include media('<desktop') {
+                padding-right: 10px;
+            }
+            @include media('<tablet') {
+                width: 100% !important;
+            }
+            &:nth-child(1) {
+              
+            }
+           
+            .h4 {
+
+                margin-left: -23px !important;
+                margin-bottom: 20px;
+            }
+
             &+.col {
-                width: 40%;
+                width:38%;
+                font-size: 15px;
+                p{
+                	margin-top: -6px;
+                	margin-bottom: 24px;
+                }
                 @include media('<widescreen') {
                     width: 40%;
                 }
                 &+.col {
+                    font-size: 18px;
                     width: 30%;
                     @include media('<widescreen') {
                         width: 33%;
                     }
                 }
             }
+            .info{
+a{
+	display: block;
+}
+            }
         }
     }
+}
+.subscribe-form{
+	margin-left: 3px;
+	input{
+		line-height: 1.1;
+		font-size: 14px;
+		color: $gray-light;
+		padding-bottom: 1px;
+		background: transparent;
+		border: none;
+		border-bottom: 1px solid  rgba($white, .8) !important;
+		width: 180px;
+				padding-left: 0 !important;
+				font-size: 14px;
+		&:focus{
+			outline: none;
+		}
+	}
+	button{
+		@include animate(font-size .1s);
+		font-size: 33px;
+		line-height: 22px;
+		background: transparent;
+		border:none;
+		color:inherit;
+		vertical-align: bottom;
+		margin-left:-1px;
+display: inline-block;
+		&:hover{
+			font-size: 41px;
+		}
+	}
 }
